[package]
name = "steggy"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A steganography tool written in Rust"
repository = "https://github.com/oliverbutler/steg"
homepage = "https://oliverbutler.uk"

[dependencies]
image = "0.24"
bitvec = "0.22"
clap = { version = "3.1.18", features = ["derive"] }